k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopping-app
  labels:
    name: shopping-app
    app: shopping-website
